sas-core/main/default/objects/Racer_Integration_Counter__c/Racer_Integration_Counter__c.object-meta.xml
<CustomObject>
    <label>Racer Integration Counter</label>
    <nameField>
        <label>Racer Integration Counter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Racer Integration Counters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>