sas-core/main/default/objects/Racer_Integration_Counter__c/fields/Accounting_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Run_Id__c</fullName>
    <label>Accounting Run Id</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>