sas-core/main/default/objects/Racer_Integration_Counter__c/fields/Accounting_Verification_Number__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Verification_Number__c</fullName>
    <label>Accounting Verification Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>